Set finalization to automatically apply yaml files

--- a/VM/provisioning/finalization.yml
+++ b/VM/provisioning/finalization.yml
@@ -1,11 +1,11 @@
----
-- hosts: 192.168.56.100
+- name: Finalization Step for ctrl Node
+  hosts: 192.168.56.100
   become: yes
   tasks:
 
     # Step 20: MetalLB Installation
     - name: Install MetalLB native manifest
-      command: kubectl apply -f https://raw.githubusercontent.com/metallb/metallb/v0.14.7/config/manifests/metallb-native.yaml
+      command: kubectl apply -f /vagrant/provisioning/metallb-native-0.14.9.yml
 
     - name: Wait for MetalLB to be ready
       command: kubectl wait -n metallb-system -l app=metallb,component=controller --for=condition=ready pod --timeout=60s
@@ -39,12 +39,6 @@
       kubernetes.core.helm_repository:
         name: kubernetes-dashboard
         repo_url: https://kubernetes.github.io/dashboard/
-
-    # - name: Update Helm repositories
-    #   kubernetes.core.helm_repository:
-    #     name: kubernetes-dashboard
-    #     repo_url: https://kubernetes.github.io/dashboard/
-    #     state: present
 
     - name: Install Kubernetes Dashboard via Helm
       kubernetes.core.helm:
@@ -100,18 +94,26 @@
       args:
         creates: /home/vagrant/istio-1.25.2/manifests
         
-    # Enabling Prometheus
-    - name: Add Prometheus Community Helm repo
-      ansible.builtin.shell: helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
-      environment:
-        KUBECONFIG: /home/vagrant/.kube/config
+    # # Enabling Prometheus
+    # - name: Add Prometheus Community Helm repo
+    #   ansible.builtin.shell: helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+    #   environment:
+    #     KUBECONFIG: /home/vagrant/.kube/config
 
-    - name: Update Helm repos
-      ansible.builtin.shell: helm repo update
-      environment:
-        KUBECONFIG: /home/vagrant/.kube/config
+    # - name: Update Helm repos
+    #   ansible.builtin.shell: helm repo update
+    #   environment:
+    #     KUBECONFIG: /home/vagrant/.kube/config
 
-    - name: Install kube-prometheus-stack (includes Prometheus Operator)
-      ansible.builtin.shell: helm install prometheus-operator prometheus-community/kube-prometheus-stack --namespace monitoring --create-namespace
-      environment:
-        KUBECONFIG: /home/vagrant/.kube/config
+    # - name: Install kube-prometheus-stack (includes Prometheus Operator)
+    #   ansible.builtin.shell: helm install prometheus-operator prometheus-community/kube-prometheus-stack --namespace monitoring --create-namespace
+    #   environment:
+    #     KUBECONFIG: /home/vagrant/.kube/config
+    
+    - name: Apply Kubernetes yml files
+      shell: |
+        kubectl apply -f /vagrant/k8s/environment.yaml
+        kubectl apply -f /vagrant/k8s/model.yaml
+        kubectl apply -f /vagrant/k8s/app.yaml
+        kubectl apply -f /vagrant/k8s/monitoring.yaml
+        kubectl apply -f /vagrant/k8s/ingress.yaml
