--- a/VM/k8s/app.yaml
+++ b/VM/k8s/app.yaml
@@ -20,7 +20,7 @@ spec:
         - name: team18-app
           image: ghcr.io/remla25-team18/app:0.0.7
           ports:
-            - containerPort: 8080
+            - containerPort: 4200
           env:
             - name: MODEL_HOST
               valueFrom:
@@ -41,4 +41,12 @@ spec:
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 8080
+      targetPort: 4200
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: app-config
+data:
+  model.host: "http://team18-model-service:5050"
+
