--- a/VM/provisioning/cluster-configuration.yml
+++ b/VM/provisioning/cluster-configuration.yml
@@ -12,17 +12,17 @@
         kubectl apply -f /vagrant/k8s/ingress.yaml
 
     # Enabling Prometheus
-    - name: Add Prometheus Community Helm repo
-      ansible.builtin.shell: helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
-      environment:
-        KUBECONFIG: /home/vagrant/.kube/config
+    # - name: Add Prometheus Community Helm repo
+    #   ansible.builtin.shell: helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+    #   environment:
+    #     KUBECONFIG: /home/vagrant/.kube/config
 
-    - name: Update Helm repos
-      ansible.builtin.shell: helm repo update
-      environment:
-        KUBECONFIG: /home/vagrant/.kube/config
+    # - name: Update Helm repos
+    #   ansible.builtin.shell: helm repo update
+    #   environment:
+    #     KUBECONFIG: /home/vagrant/.kube/config
 
-    - name: Install kube-prometheus-stack (includes Prometheus Operator)
-      ansible.builtin.shell: helm install prometheus-operator prometheus-community/kube-prometheus-stack --namespace monitoring --create-namespace
-      environment:
-        KUBECONFIG: /home/vagrant/.kube/config
+    # - name: Install kube-prometheus-stack (includes Prometheus Operator)
+    #   ansible.builtin.shell: helm install prometheus-operator prometheus-community/kube-prometheus-stack --namespace monitoring --create-namespace
+    #   environment:
+    #     KUBECONFIG: /home/vagrant/.kube/config
