--- a/VM/provisioning/finalization.yml
+++ b/VM/provisioning/finalization.yml
@@ -75,19 +75,19 @@
     # Step 23: Install Istio
     - name: Download Istio 1.25.2
       get_url:
-        url: https://github.com/istio/istio/releases/download/1.25.2/istio-1.25.2-linux-amd64.tar.gz
+        url: "https://github.com/istio/istio/releases/download/1.25.2/istio-1.25.2-linux-{{ ansible_architecture | regex_replace('aarch64', 'arm64') | regex_replace('x86_64', 'amd64') }}.tar.gz"
         dest: /tmp/istio.tar.gz
         mode: '0644'
-      become: true
+
+    - name: Print installed architecture
+      debug:
+        msg: "Installed architecture: {{ ansible_architecture }}"
 
     - name: Extract Istio
       ansible.builtin.unarchive:
         src: /tmp/istio.tar.gz
         dest: /home/vagrant/
         remote_src: yes
-      become: true
-      args:
-        creates: /home/vagrant/istio-1.25.2/manifests
 
     - name: Add istioctl to PATH
       lineinfile:
@@ -98,6 +98,17 @@
 
     - name: Run istioctl install (demo profile)
       shell: |
-        istioctl install --set profile=demo -y
+        /home/vagrant/istio-1.25.2/bin/istioctl install --set profile=demo -y
       args:
         creates: /home/vagrant/istio-1.25.2/manifests
+
+    - name: Install Istio Prometheus add-on
+      shell: |
+        cd /home/vagrant/istio-1.25.2/samples/addons
+        kubectl apply -f ./prometheus.yaml
+        kubectl apply -f ./kiali.yaml
+
+    - name: Check Istio version
+      shell: |
+        export PATH=$PATH:/home/vagrant/istio-1.25.2/bin
+        istioctl version
