--- a/VM/k8s/app.yaml
+++ b/VM/k8s/app.yaml
@@ -35,11 +35,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: team18-app
+  labels:
+    app: team18-app
 spec:
   selector:
     app: team18-app
   ports:
-    - protocol: TCP
+    - name: metrics
+      protocol: TCP
       port: 80
       targetPort: 4200
 ---
