--- a/VM/provisioning/inventory.cfg
+++ b/VM/provisioning/inventory.cfg
@@ -7,4 +7,4 @@ node-2 ansible_host=192.168.56.102 ansible_user=vagrant ansible_ssh_private_key_
 
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
-ansible_host_key_checking=False  # Disable host key verification
+ansible_host_key_checking=False
