--- a/VM/provisioning/finalization.yml
+++ b/VM/provisioning/finalization.yml
@@ -88,6 +88,10 @@
         src: /tmp/istio.tar.gz
         dest: /home/vagrant/
         remote_src: yes
+        remote_src: yes
+        owner: vagrant
+        group: vagrant
+        mode: '0755'
 
     - name: Add istioctl to PATH
       lineinfile:
