--- a/VM/provisioning/cluster-configuration.yml
+++ b/VM/provisioning/cluster-configuration.yml
@@ -10,6 +10,7 @@
         kubectl apply -f /vagrant/k8s/app.yaml
         kubectl apply -f /vagrant/k8s/monitoring.yaml
         kubectl apply -f /vagrant/k8s/ingress.yaml
+        kubectl apply -f /vagrant/k8s/istio-rate-limit.yaml
 
     # Enabling Prometheus
     # - name: Add Prometheus Community Helm repo
