--- a/VM/k8s/istio-ingress.yaml
+++ b/VM/k8s/istio-ingress.yaml
@@ -1,5 +1,5 @@
 #istio-ingress.yaml
-apiVersion: networking.istio.io/v1beta1
+apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
   name: team18-gateway
@@ -14,7 +14,7 @@ spec:
       hosts:
         - "*"
 ---
-apiVersion: networking.istio.io/v1beta1
+apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: team18-entry-service
@@ -50,7 +50,7 @@ spec:
             subset: v2
           weight: 20
 ---
-apiVersion: networking.istio.io/v1beta1
+apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
 metadata:
   name: team18-app
