--- a/VM/k8s/istio-rate-limit.yaml
+++ b/VM/k8s/istio-rate-limit.yaml
@@ -1,4 +1,4 @@
-apiVersion: networking.istio.io/v1beta1
+apiVersion: networking.istio.io/v1alpha3
 kind: EnvoyFilter
 metadata:
   name: ingressgateway-rate-limit
@@ -12,12 +12,12 @@ spec:
       match:
         context: GATEWAY
         listener:
-          portNumber: 80
+          portNumber: 8080
           filterChain:
             filter:
               name: "envoy.filters.network.http_connection_manager"
       patch:
-        operation: INSERT_BEFORE
+        operation: INSERT_FIRST
         value:
           name: envoy.filters.http.local_ratelimit
           typed_config:
