--- a/helm/templates/app.yaml
+++ b/helm/templates/app.yaml
@@ -35,7 +35,7 @@ spec:
                   name: app-config
                   key: MODEL_PORT
       imagePullSecrets:
-        - name: "{{ $.Values.app.imagePullSecret }}"
+        - name: {{ $.Values.app.imagePullSecret | quote }}
 ---
 {{- end}}
 apiVersion: v1
