--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -15,15 +15,15 @@ app:
     MODEL_SERVICE_PORT: 5050
   versions:
     v1:
-      tag: "0.0.18"
+      tag: 0.0.18
     v2:
-      tag: "0.0.19"
+      tag: 0.0.19
 
 model:
   replicaCount: 1
   image:
     repository: ghcr.io/remla25-team18/model-service
-    tag: "1.0.2"
+    tag: 1.0.3
     pullPolicy: Always
   servicePort: 5050
 
