--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -28,8 +28,9 @@ model:
   servicePort: 5050
 
 monitoring:
-  enabled: true
-  appService:
-    nodePort: 30001
-    port: 9090
-    targetPort: 9090
+  namespace: default
+  releaseLabel: prometheus
+  metrics:
+    portName: metrics
+    path: /metrics
+    interval: 15s
