Added ingress template to Helm chart

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -27,6 +27,14 @@ model:
     pullPolicy: Always
   servicePort: 5050
 
+ingress:
+  className: nginx
+  host: team18.local
+  path: /
+  pathType: Prefix
+  rewriteTarget: /
+  namespace: default
+
 monitoring:
   namespace: default
   releaseLabel: prometheus
