Added Istio Gateway / Ingress / Virtual Service to Helm chart

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -6,13 +6,16 @@ app:
   image:
     repository: ghcr.io/remla25-team18/app
     pullPolicy: IfNotPresent
+
   imagePullSecret: ghcr-secret
   containerPort: 4200
   servicePort: 80
   replicaCount: 1
+
   env:
     MODEL_SERVICE_URL: team18-model-service
     MODEL_SERVICE_PORT: 5050
+
   versions:
     v1:
       tag: 0.0.18
@@ -21,10 +24,12 @@ app:
 
 model:
   replicaCount: 1
+
   image:
     repository: ghcr.io/remla25-team18/model-service
     tag: 1.0.3
     pullPolicy: Always
+
   servicePort: 5050
 
 ingress:
@@ -38,7 +43,29 @@ ingress:
 monitoring:
   namespace: default
   releaseLabel: prometheus
+
   metrics:
     portName: metrics
     path: /metrics
     interval: 15s
+
+istio:
+  gatewayName: team18-gateway
+  virtualServiceName: team18-entry-service
+  host: team18-app
+  httpHeaderName: experiment
+
+  server:
+    port: 80
+    name: http
+    protocol: HTTP
+    hosts:
+      - "*"
+
+  subsets:
+    - name: v1
+      version: v1
+      weight: 80
+    - name: v2
+      version: v2
+      weight: 20
