Added Istio rate limiter to Helm chart

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -69,3 +69,26 @@ istio:
     - name: v2
       version: v2
       weight: 20
+
+rateLimit:
+  name: ingressgateway-rate-limit
+  namespace: istio-system
+  selector:
+    istio: ingressgateway
+  portNumber: 8080
+  statPrefix: http_local_rate_limiter
+  maxTokens: 10
+  tokensPerFill: 10
+  fillInterval: 60s
+
+  runtimeKeys:
+    enabled: local_rate_limit_enabled
+    enforced: local_rate_limit_enforced
+
+  defaultValue:
+    numerator: 100
+    denominator: HUNDRED
+
+  responseHeader:
+    key: x-local-rate-limit
+    value: "true"
