--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -9,6 +9,7 @@ spec:
   ingressClassName: {{ .Values.ingress.className }}
   rules:
     - host: {{ .Values.ingress.host }}
+    - host: {{ printf "%s.%s" .Values.releaseNamePrefix .Values.ingress.domain }}  # e.g., team18.local
       http:
         paths:
           - path: {{ .Values.ingress.path }}
