--- a/helm/templates/istio-ingress.yaml
+++ b/helm/templates/istio-ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
-  name: {{ .Values.istio.gatewayName }}
+  name: {{ printf "%s-%s" .Values.releaseNamePrefix .Values.istio.gatewayName }}
 spec:
   selector:
     istio: ingressgateway
@@ -18,12 +18,12 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: {{ .Values.istio.virtualServiceName }}
+  name: {{ printf "%s-%s" .Values.releaseNamePrefix .Values.istio.virtualServiceName }}
 spec:
   hosts:
     - "*"
   gateways:
-    - {{ .Values.istio.gatewayName }}
+    - {{ printf "%s-%s" .Values.releaseNamePrefix .Values.istio.gatewayName }}
   http:
     - match:
         - headers:
@@ -31,7 +31,7 @@ spec:
               exact: "v2"
       route:
         - destination:
-            host: {{ .Values.istio.host }}
+            host: {{ printf "%s-%s" .Values.releaseNamePrefix .Values.istio.host }}
             subset: v2
     - match:
         - headers:
@@ -39,12 +39,12 @@ spec:
               exact: "v1"
       route:
         - destination:
-            host: {{ .Values.istio.host }}
+            host: {{ printf "%s-%s" .Values.releaseNamePrefix .Values.istio.host }}
             subset: v1
     - route:
 {{- range .Values.istio.subsets }}
         - destination:
-            host: {{ $.Values.istio.host }}
+            host: {{ printf "%s-%s" $.Values.releaseNamePrefix $.Values.istio.host }}
             subset: {{ .name }}
           weight: {{ .weight }}
 {{- end }}
@@ -52,9 +52,9 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
 metadata:
-  name: {{ .Values.istio.host }}
+  name: {{ printf "%s-%s" .Values.releaseNamePrefix .Values.istio.host }}
 spec:
-  host: {{ .Values.istio.host }}
+  host: {{ printf "%s-%s" .Values.releaseNamePrefix .Values.istio.host }}
   trafficPolicy:
     loadBalancer:
       consistentHash:
