--- a/helm/templates/app.yaml
+++ b/helm/templates/app.yaml
@@ -2,23 +2,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ printf "%s-app-%s" $.Values.releaseNamePrefix $version }}
+  name: {{ printf "%s-app-%s" $.Release.Name $version }}
   labels:
-    app: {{ printf "%s-app" $.Values.releaseNamePrefix }}
+    app: {{ printf "%s-app" $.Release.Name }}
 spec:
   replicas: {{ $.Values.app.replicaCount }}
   selector:
     matchLabels:
-      app: {{ printf "%s-app" $.Values.releaseNamePrefix }}
+      app: {{ printf "%s-app" $.Release.Name }}
       version: {{ $version }}
   template:
     metadata:
       labels:
-        app: {{ printf "%s-app" $.Values.releaseNamePrefix }}
+        app: {{ printf "%s-app" $.Release.Name }}
         version: {{ $version }}
     spec:
       containers:
-        - name: {{ printf "%s-app" $.Values.releaseNamePrefix }}
+        - name: {{ printf "%s-app" $.Release.Name }}
           image: {{ printf "%s:%s" $.Values.app.image.repository $cfg.tag }}
           imagePullPolicy: {{ $.Values.app.image.pullPolicy | quote }}
           ports:
@@ -27,12 +27,12 @@ spec:
             - name: DNS
               valueFrom:
                 configMapKeyRef:
-                  name: {{ printf "%s-app-config" $.Values.releaseNamePrefix }}
+                  name: {{ printf "%s-app-config" $.Release.Name }}
                   key: DNS
             - name: MODEL_PORT
               valueFrom:
                 configMapKeyRef:
-                  name: {{ printf "%s-app-config" $.Values.releaseNamePrefix }}
+                  name: {{ printf "%s-app-config" $.Release.Name }}
                   key: MODEL_PORT
       imagePullSecrets:
         - name: {{ $.Values.app.imagePullSecret | quote }}
@@ -41,12 +41,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ printf "%s-app" $.Values.releaseNamePrefix }}
+  name: {{ printf "%s-app" $.Release.Name }}
   labels:
-    app: {{ printf "%s-app" $.Values.releaseNamePrefix }}
+    app: {{ printf "%s-app" $.Release.Name }}
 spec:
   selector:
-    app: {{ printf "%s-app" $.Values.releaseNamePrefix }}
+    app: {{ printf "%s-app" $.Release.Name }}
   ports:
     - name: metrics
       protocol: TCP
@@ -56,7 +56,7 @@ spec:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ printf "%s-app-config" .Values.releaseNamePrefix }}
+  name: {{ printf "%s-app-config" .Release.Name }}
 data:
   DNS: {{ .Values.app.env.MODEL_SERVICE_URL | quote }}
   MODEL_PORT: {{ .Values.app.env.MODEL_SERVICE_PORT | quote }}
