--- a/helm/templates/istio-rate-limit.yaml
+++ b/helm/templates/istio-rate-limit.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: EnvoyFilter
 metadata:
-  name: {{ printf "%s-%s" .Values.releaseNamePrefix .Values.rateLimit.name }}
+  name: {{ printf "%s-%s" .Release.Name .Values.rateLimit.name }}
   namespace: {{ .Values.rateLimit.namespace }}
 spec:
   workloadSelector:
@@ -22,7 +22,7 @@ spec:
           name: envoy.filters.http.local_ratelimit
           typed_config:
             "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
-            stat_prefix: {{ printf "%s-%s" .Values.releaseNamePrefix .Values.rateLimit.statPrefix }}
+            stat_prefix: {{ printf "%s-%s" .Release.Name .Values.rateLimit.statPrefix }}
             token_bucket:
               max_tokens: {{ .Values.rateLimit.maxTokens }}
               tokens_per_fill: {{ .Values.rateLimit.tokensPerFill }}
