--- a/VM/provisioning/node.yaml
+++ b/VM/provisioning/node.yaml
@@ -5,12 +5,20 @@
     kube_config_path: /etc/kubernetes/admin.conf
 
   tasks:
+    - name: Check if this node is already part of the cluster
+      command: kubectl get node {{ inventory_hostname }} --kubeconfig={{ kube_config_path }}
+      delegate_to: ctrl
+      # we'll use the return code of this status to check if the node is already part of the cluster
+      register: node_status 
+      failed_when: false
+      changed_when: false
+
     - name: Generate the kubeadm join command on the controller
       command: kubeadm token create --print-join-command
       delegate_to: ctrl
       register: join_command_output
+      when: node_status.rc != 0
 
     - name: Run the join command on the worker node
       shell: "{{ join_command_output.stdout }}"
-      environment:
-        KUBECONFIG: "{{ kube_config_path }}"
+      when: node_status.rc != 0
