regexp existed but I fixed messed up indentation

--- a/VM/provisioning/general.yaml
+++ b/VM/provisioning/general.yaml
@@ -74,26 +74,26 @@
     - name: Disable AppArmor
       ansible.builtin.lineinfile:
         path: /etc/containerd/config.toml
-        regexp: '^(\s*)disable_apparmor' # does not capture indentation
-        line: "disable_apparmor = true"
-        state: present
-        backup: yes # for debug
+        regexp: '^(\s*)disable_apparmor\s*='
+        line: '\1disable_apparmor = true'
+        backrefs: yes
+        backup: yes
 
     - name: Update sandbox image version
       ansible.builtin.lineinfile:
         path: /etc/containerd/config.toml
-        regexp: '^(\s*)sandbox_image' # does not capture indentation
-        line: 'sandbox_image = "registry.k8s.io/pause:3.10"'
-        state: present
-        backup: yes # for debug
+        regexp: '^(\s*)sandbox_image\s*='
+        line: '\1sandbox_image = "registry.k8s.io/pause:3.10"'
+        backrefs: yes
+        backup: yes
 
     - name: Setup systemd cgroup
       ansible.builtin.lineinfile:
         path: /etc/containerd/config.toml
-        regexp: '^(\s*)SystemdCgroup' # does not capture indentation
-        line: "SystemdCgroup = true"
-        state: present
-        backup: yes # for debug
+        regexp: '^(\s*)SystemdCgroup\s*='
+        line: '\1SystemdCgroup = true'
+        backrefs: yes
+        backup: yes
 
     - name: Restart containerd service
       ansible.builtin.service:
